--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,9 +15,9 @@
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description>
         <![CDATA[
-    Плагин CreateConfig позволяет выбирать один из конфигов, которые находятся в папке config, которая в свою очередь распологается на том же уровне, что и файл превью
-    Java
-    Gradle
+                The CreateConfig plugin allows you to select one of the configs located in the config folder, which in turn is decrypted at the same level as the previous file
+                Java
+                Gradle
     ]]>
     </description>
 
