--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,7 +31,7 @@
 
     </extensions>
     <actions>
-        <action id="createconfig" class="actions.CreateConfigAction" text="Create config">
+        <action id="createconfig" class="actions.CreateConfigAction" text="Create config" icon="icons/config_icon.png">
             <add-to-group group-id="NavBarToolBar" anchor="first"></add-to-group>
         </action>
     </actions>
