--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -52,5 +52,9 @@
         <action id="createconfig" class="actions.CreateConfigAction" text="Create config" icon="icons/config_icon.png">
             <add-to-group group-id="NavBarToolBar" anchor="first"></add-to-group>
         </action>
+        <action id="MyInlayProviderAction" class="actions.MyInlayProvider" text="Найти в config"
+                description="Найти в config">
+            <add-to-group group-id="EditorPopupMenu" anchor="first" />
+        </action>
     </actions>
 </idea-plugin>
