--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,7 +47,7 @@
             <h2>Добавлено</h2>
             <ul>
               <li>Группировка параметров</li>
-              <li>Поддержка указания нескольких значений для параметра</li>
+              <li>Возможность указать несколько значений для параметра</li>
               <li>Добавление/Изменение параметра во всех .ini из тестового файла</li>
             </ul>
             <h2>Исправлено</h2>
