Не зависим от регистра

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -49,6 +49,7 @@
               <li>Группировка параметров</li>
               <li>Возможность указать несколько значений для параметра</li>
               <li>Добавление/Изменение параметра во всех .ini из тестового файла</li>
+              <li>Автодополнение с названиями параметров из конфигов</li>
             </ul>
             <h2>Исправлено</h2>
             <ul>
