Revert "первая позиция"
This reverts commit 90c058bdea1c5a4336dbdd595c8f8cfd8c4d21f6.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -84,7 +84,7 @@
         </action>
         <action id="myplugin.AddEditParam" class="actions.AddEditAction"
                 text="Добавить/Изменить" icon="icons/config_icon.svg">
-            <add-to-group group-id="EditorPopupMenu" anchor="first"/>
+            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
         </action>
     </actions>
     <application-components>
