список файлов только с .toml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -62,6 +62,11 @@
               <li>Добрроска параметров в документ</li>
               <li>Привязка к экрану окна Добавить/Изменить</li>
             </ul>
+            <h1>3.2 - 2023-09-04</h1>
+            <h2>Добавлено</h2>
+            <ul>
+              <li>Работа с .toml файлами для всех фич</li>
+            </ul>
         ]]>
     </change-notes>
 
