--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -67,6 +67,11 @@
             <ul>
               <li>Работа с .toml файлами для всех фич</li>
             </ul>
+            <h1>3.3 - 2023-09-07</h1>
+            <h2>Исправлено</h2>
+            <ul>
+              <li>Экранирование</li>
+            </ul>
         ]]>
     </change-notes>
 
