--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,7 +70,7 @@
             <h1>3.3 - 2023-09-07</h1>
             <h2>Исправлено</h2>
             <ul>
-              <li>Экранирование</li>
+              <li>Поправлено экранирование при переносе параметров в config</li>
             </ul>
         ]]>
     </change-notes>
