Доработано удаление, когда в удаляемой папке есть файлы

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -72,6 +72,13 @@
             <ul>
               <li>Поправлено экранирование при переносе параметров в config</li>
             </ul>
+            </ul>
+            <h1>3.4 - 2023-10-10</h1>
+            <h2>Добавлено</h2>
+            <ul>
+              <li>Удаление файлов по маске</li>
+              <li>Указание пути до текущей папки одним параметром</li>
+            </ul>
         ]]>
     </change-notes>
 
