--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -79,6 +79,13 @@
               <li>Удаление файлов по маске</li>
               <li>Указание пути до текущей папки одним параметром</li>
             </ul>
+            </ul>
+            <h1>3.4.1 - 2023-10-27</h1>
+            <h2>Исправлено</h2>
+            <ul>
+              <li>Папки, в которых находились файлы, удалялись не до конца</li>
+              <li>Были расширены билды Pycharm</li>
+            </ul>
         ]]>
     </change-notes>
 
